# read_chunk_iter

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: chunked_file_read.rs
examples/: read_compare.rs  read_compare_benchmarking.md
src/: dev_helpers.rs  lib.rs  simple.rs  threaded.rs  vectored_read.rs
