[package]
name = "read_chunk_iter"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "An iterator adapter over a reader that yields fixed-size chunks at a time."
repository = "https://github.com/rlee287/read_chunk_iter"
readme = "README.md"

keywords = ["iterator"]
categories = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
version-sync = { version = "0.9.4", default-features = false, features = ["html_root_url_updated"] }
